--- a/app/src/main/res/layout/activity_message.xml
+++ b/app/src/main/res/layout/activity_message.xml
@@ -1,20 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/scrollView1"
     android:layout_width="match_parent"
     android:layout_height="wrap_content" >
 
     <LinearLayout
-        android:id="@+id/linearLayoutDebug"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical" >
 
         <TextView
-            android:id="@+id/textView"
+            android:id="@+id/messageScreenTextView"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Message screen" />
+            android:layout_height="wrap_content" />
 
     </LinearLayout>
 </ScrollView>
