--- a/app/src/main/res/layout/activity_view_message.xml
+++ b/app/src/main/res/layout/activity_view_message.xml
@@ -11,7 +11,9 @@
         <org.beiwe.app.survey.MarkDownTextView
             android:id="@+id/messageContentTextView"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:padding="20dp"
+            android:textSize="20sp" />
 
         <Button
             style="@style/ViewMessageButtonStyle"
